
syntax = "proto3";

package otp_app_package;

service OtpApp {
    rpc sendRequest (mobileNo) returns (status) {}
    rpc validateCode (validateMsg) returns (status) {}
}

message mobileNo {
    string mobileNo = 1;
}

message status {
    string status = 1;
    string err_status = 2; 
}


message validateMsg {
    string mobileNo = 1;
    string code = 2 ;
}

